--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Gilles de Hollander is a cognitive neuroscientist, based at the Zurich
   Center for Neuroeconomics (ZNE) at the University of Zurich (UZH) (tes)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gilles86.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: GillesdeH
 github_username:  Gilles86
 
