--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,11 @@ sass:
   sass_dir: assets/css
   style: compressed
 
+collections:
+  publications:
+    output: true
+    permalink: /publications/:path/
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
